// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Car Queries fetches list of cars with field name, email, price, rating, url 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "getCars": [
          {
            "email": "mehedimiah47@gmail.com",
            "name": "Ferrari 2021",
            "price": 12,
            "rating": 5,
            "url": "https://images.pexels.com/photos/97353/pexels-photo-97353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "mehedimiah47@gmail.com",
            "name": "Tesla Super Truck",
            "price": 12,
            "rating": 5,
            "url": "https://images.pexels.com/photos/760979/pexels-photo-760979.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "mehedimiah47@gmail.com",
            "name": "Tesla Super Truck",
            "price": 12,
            "rating": 5,
            "url": "https://images.pexels.com/photos/2527939/pexels-photo-2527939.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "mehedimiah47@gmail.com",
            "name": "TaTa super bus",
            "price": 12,
            "rating": 5,
            "url": "https://images.pexels.com/photos/981570/pexels-photo-981570.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "mehedimiah47@gmail.com",
            "name": "TaTa super bus",
            "price": 12,
            "rating": 5,
            "url": "https://images.pexels.com/photos/163836/vw-bulli-meadow-peace-163836.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Toyota truck 2011",
            "price": 20,
            "rating": 4,
            "url": "https://images.pexels.com/photos/2527931/pexels-photo-2527931.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "Volbo bus",
            "price": 35,
            "rating": 3,
            "url": "https://images.pexels.com/photos/2320208/pexels-photo-2320208.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "American ferrari",
            "price": 22,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "American ferrari",
            "price": 22,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "American ferrari",
            "price": 22,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "American ferrari",
            "price": 22,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "American ferrari",
            "price": 22,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "American ferrari",
            "price": 22,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "super ferrari",
            "price": 23,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "super ferrari",
            "price": 23,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "super ferrari",
            "price": 23,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "super ferrari",
            "price": 23,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "super ferrari",
            "price": 23,
            "rating": 5,
            "url": "https://images.pexels.com/photos/102984/pexels-photo-102984.jpeg?auto=compress&cs=tinysrgb&w=1600",
          },
          {
            "email": "test@gmail.com",
            "name": "kolkatar taxi",
            "price": 21,
            "rating": 4,
            "url": "https://images.pexels.com/photos/381228/pexels-photo-381228.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "jolome5780@sunetoa.com",
            "name": "deshi taxi",
            "price": 14,
            "rating": 5,
            "url": "https://images.pexels.com/photos/249343/pexels-photo-249343.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
          },
          {
            "email": "clark@gmail.com",
            "name": "TaTa Taxi",
            "price": 20,
            "rating": 5,
            "url": "https://images.unsplash.com/photo-1510073666657-90dd548ff9dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80",
          },
          {
            "email": "clark@gmail.com",
            "name": "TaTa Taxi",
            "price": 20,
            "rating": 5,
            "url": "https://images.unsplash.com/photo-1510073666657-90dd548ff9dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80",
          },
          {
            "email": "clark@gmail.com",
            "name": "TaTa Taxi",
            "price": 20,
            "rating": 5,
            "url": "https://images.unsplash.com/photo-1510073666657-90dd548ff9dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80",
          },
        ],
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`Car Queries fetches single car with unique id arg 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "getCar": {
          "email": "mehedimiah47@gmail.com",
          "name": "Ferrari 2021",
          "price": 12,
          "rating": 5,
          "url": "https://images.pexels.com/photos/97353/pexels-photo-97353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
